# django-ninja-boilerplate

./: .env.development  .env.example  .env.production.example  .gitignore  CLAUDE_example.md  Procfile  README.md  conftest.py  db.sqlite3  deploy.sh  package-lock.json  pyproject.toml  pytest.ini  setup-my-saas.py  skills-lock.json
.github/workflows/: deploy.yaml  lint.yaml  tests.yaml  trivy.yaml
docs/: compose-local.yaml  compose.yaml  mkdocs.yml
docs/docs/: index.md
docs/docs/01_setup_inicial/: 01_Ambiente_Dev.md  01_Ambiente_Poetry.md  02_Configurando_Django.md  03_CRUD_de_Users.md  03_Endpoint_status.md  04_Autenticacao_e_Autorizacao.md  04_Implementando_CI_CD.md  05_Implementando_CI_CD.md  06_Commit_linting.md  06_Padronizando_Erros.md  07_Padronizando_Erros.md
docs/docs/02_setup_front/: 01_Iniciando_React.md  02_Pagina_Status.md
docs/docs/03_usuarios_autenticacao/: 01_CRUD_de_Users.md  02_Ativacao_de_contas.md  02_Autenticacao_e_Autorizacao.md  03_Autenticacao_e_Autorizacao.md  04_Integrando_Gmail_Emails.md  04_Troca_e_Reset_Senha.md
docs/docs/04_frontend_login/: 01_Preparando_Front.md  02_Tela_login.md  03_Tela_cadastro.md  04_Tela_ativacao.md  05_Tela_edicao_dados.md  06_Tela_reset_senha.md  07_Problema_de_XSS.md  08_Configurando_Login_Google.md  09_Avatar_Google.md
docs/docs/05_login_social/: 01_Configurando_Login_Google.md
docs/docs/Appendix/: 01_Configurando_o_Traefik.md  02_Rate_Limiting.md  03_Headers_de_Seguranca.md  04_Transferencia_Dominio_Cloudflare.md  05_Hardening_do_servidor.md
infra/: Dockerfile-pro  compose-dev.yaml  compose-pro.yaml  compose.yaml  entrypoint.sh  mailer.py  wait-for-postgres.py
myapi/: api.py  settings.py  urls.py
myapi/core/: adapters.py  admin.py  api.py  apps.py  auth.py  exceptions.py  middleware.py  models.py  ratelimit.py  schemas.py
myapi/core/migrations/: 0001_initial.py  0002_delete_uuiduser.py
myapi/core/tests/: test_auth.py  test_status.py  test_users.py
myapi/tests/: test_healthcheck.py
myapi/users/: admin.py  api.py  models.py  schemas.py  services.py
myapi/users/migrations/: 0001_initial.py  0002_activationtoken.py  0003_passwordresettoken.py  0004_uuiduser_avatar_url.py
myapi/users/tests/: test_users.py
next/: package-lock.json  package.json
next/config/: api.js
next/infra/: Dockerfile-pro  compose-dev.yaml  compose-pro.yaml
next/pages/: activate.jsx  home.jsx  index.js  index.jsx  login.jsx  registration.jsx
next/pages/accounts/google/login/callback/: index.jsx
next/pages/activate/[token_id]/: index.jsx
next/pages/reset-password/[token_id]/: index.jsx
next/pages/status/: index.js
next/styles/: darkTheme.js
next/utils/: api.js  auth.js  users.js
react/infra/: compose-dev.yaml  compose-pro.yaml
react/myfront/: index.html  package-lock.json  package.json
