[project]
name = "django-ninja-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Nonogaki",email = "brunono@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-ninja (>=1.5.0,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "python-decouple (>=3.8,<4.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
